--- a/app/templates/configure/overall.html
+++ b/app/templates/configure/overall.html
@@ -18,7 +18,7 @@
             <label for="winning-item">Winning Item:</label>
             <select id="winning-item" name="winning_item">
                 <option value="" {% if not current.winning_item %}selected{% endif %}>(None)</option>
-                {% for item in current.game_data.items %}
+                {% for item in game_data.items %}
                     <option value="{{ item.id }}" {% if current.winning_item.id == item.id %}selected{% endif %}>{{ item.name }}</option>
                 {% endfor %}
             </select>
