--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -6,26 +6,26 @@
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure') }}">General Setup</a>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for('configure_location', location_id=location.id) }}">Location Setup</a>
+        <a class="upper-left" href="{{ url_for('configure_location', location_id=current.id) }}">Location Setup</a>
     </div>
 {% endblock %}
 
 {% block content %}
-    <h1>{{ location.name }}</h1>
-    {% if location.description %}
-        <p>{{ location.description }}</p>
+    <h1>{{ current.name }}</h1>
+    {% if current.description %}
+        <p>{{ current.description }}</p>
     {% endif %}
 
     {% set outerscope = namespace(display_section = false) %}
-    {% for char in location.game_data.characters %}
-        {% if char.location.id == location.id %}
+    {% for char in game_data.characters %}
+        {% if char.current.id == current.id %}
             {% set outerscope.display_section = true %}
         {% endif %}
     {% endfor %}
     {% if outerscope.display_section %}
     <h2>Characters</h2>
     <ul>
-        {% for char in location.game_data.characters if char.location.id == location.id %}
+        {% for char in game_data.characters if char.current.id == current.id %}
             <li>
                 <a href="{{ url_for('play_char', char_id=char.id) }}">{{ char.name }}</a>
             </li>
@@ -34,15 +34,15 @@
     {% endif %}
 
     {% set outerscope = namespace(display_section = false) %}
-    {% for item in location.game_data.items %}
-        {% if item.contained_by and item.contained_by.__class__.__name__ == 'Location' and item.contained_by.id == location.id %}
+    {% for item in game_data.items %}
+        {% if item.contained_by and item.contained_by.__class__.__name__ == 'Location' and item.contained_by.id == current.id %}
             {% set outerscope.display_section = true %}
         {% endif %}
     {% endfor %}
     {% if outerscope.display_section %}
     <h2>Items</h2>
     <ul>
-        {% for item in location.game_data.items if item.contained_by and item.contained_by.__class__.__name__ == 'Location' and item.contained_by.id == location.id %}
+        {% for item in game_data.items if item.contained_by and item.contained_by.__class__.__name__ == 'Location' and item.contained_by.id == current.id %}
             <li>
                 <a href="{{ url_for('play_item', item_id=item.id) }}">{{ item.name }}</a>
             </li>
@@ -50,10 +50,10 @@
     </ul>
     {% endif %}
 
-    {% if location.destinations %}
+    {% if current.destinations %}
     <h2>Destinations</h2>
     <ul>
-        {% for destination, distance in location.destinations.items() %}
+        {% for destination, distance in current.destinations.items() %}
             <li>
                 <a href="{{ url_for('play_location', location_id=destination.id) }}">{{ destination.name }}</a> -
                 Distance: {{ distance }}
