--- a/app/templates/play/overview.html
+++ b/app/templates/play/overview.html
@@ -45,7 +45,7 @@
         <tr>
             <th>Character</th>
             <th>Location</th>
-            <th>Action</th>
+            <th>Recent Action</th>
             <th>Player</th>
         </tr>
         {% for char in charlist %}
