--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -153,12 +153,12 @@
 
             // the Start button may change to "Running..."
             function updateStartbuttonLabel() {
-                fetch('/item/progress_running/{{ current.id }}')
+                fetch('/item/progress_ongoing/{{ current.id }}')
                     .then(response => response.json())
                     .then(data => {
                         const startBtn = document.getElementById("start-btn");
                         const stopBtn = document.getElementById("stop-btn");
-                        if (data.is_running) {
+                        if (data.is_ongoing) {
                             startBtn.innerHTML = "Running...";
                             startBtn.disabled = true;
                             stopBtn.disabled = false;
