--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -144,34 +144,33 @@
 
             // Global variable to store the elapsed time.
             let elapsedTime = 0;
+            let in_progress = false;
 
             // Update the elapsed time on the client.
             function updateElapsedTime() {
-              // Increment the elapsed time by 1 second
-              elapsedTime += 1;
-              $('#elapsed-time').text(formatTime(elapsedTime));
+                // Increment the elapsed time by 1 second
+                if (in_progress) {
+                    elapsedTime += 1;
+                }
+                $('#elapsed-time').text(formatTime(elapsedTime));
             }
 
             // Function to format the time in HH:MM:SS format.
             function formatTime(time) {
               const hours = Math.floor(time / 3600);
               const minutes = Math.floor((time % 3600) / 60);
-              const seconds = time % 60;
+              const seconds = Math.floor(time % 60);
               return `${hours}:${minutes.toString().padStart(2, '0')}:${seconds.toString().padStart(2, '0')}`;
             }
 
             // Reconcile the elapsed time with the server-side progress time.
             function reconcileElapsedTime(data) {
-                const serverTime = parseTime(data.time);
-                // Reconcile the elapsed time with the server time
-                elapsedTime = serverTime;
-                $('#elapsed-time').text(formatTime(elapsedTime));
-            }
-
-            // Parse the time in HH:MM:SS format and convert it to seconds.
-            function parseTime(timeString) {
-              const [hours, minutes, seconds] = timeString.split(':').map(Number);
-              return hours * 3600 + minutes * 60 + seconds;
+                if (data.elapsed_time) {
+                    elapsedTime = data.elapsed_time;
+                } else {
+                    elapsedTime = 0;
+                }
+                $('#dest-time').text(formatTime(elapsedTime));
             }
 
             // the Start button may change to "Running..."
@@ -194,6 +193,7 @@
                 $.get('/item/progress_data/{{ current.id }}', function(data) {
                     updateQuantity(data);
                     {% if current.growable == 'over_time' %}
+                    in_progress = data.is_ongoing
                     reconcileElapsedTime(data);
                     updateStartbuttonLabel(data);
                     {% endif %}
