--- a/app/templates/configure/index.html
+++ b/app/templates/configure/index.html
@@ -15,6 +15,7 @@
 
 {% block content %}
     <h1>Game Setup</h1>
+    <center><a href="{{ url_for('browse_scenarios') }}"><button>Browse Example Scenarios</button></a></center>
     <div class="entitylist-container">
         <a href="{{ url_for('configure_overall') }}">Overall Settings</a>
     </div>
