--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -18,14 +18,14 @@
 
     {% set outerscope = namespace(display_section = false) %}
     {% for char in game_data.characters %}
-        {% if char.current.id == current.id %}
+        {% if char.location.id == current.id %}
             {% set outerscope.display_section = true %}
         {% endif %}
     {% endfor %}
     {% if outerscope.display_section %}
     <h2>Characters</h2>
     <ul>
-        {% for char in game_data.characters if char.current.id == current.id %}
+        {% for char in game_data.characters if char.location.id == current.id %}
             <li>
                 <a href="{{ url_for('play_char', char_id=char.id) }}">{{ char.name }}</a>
             </li>
