--- a/app/templates/session/username.html
+++ b/app/templates/session/username.html
@@ -5,9 +5,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Set Username</h1>
-    <p>Looks like you don't have a player name yet, so let's make one now.<br>
-    This is your ID to access the game,
+    <h1>Choose Username</h1>
+    <p>This is your ID to access the game,
     not the name of your player's character.</p>
     <p>For example, your username could be tom123
     (try to avoid giving personal information),
