Switch to PostgreSQL and SQLAlchemy for complex relationships.

--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -3,8 +3,9 @@
 {% block content %}
     <h1>Item Setup</h1>
     <p>These are the most versatile things in the game.
-    In addition to typical items such as resources or gear,
-    they can represent an upgrade in production speed, or money or reputation.
+    In addition to typical items such as resources, money, or gear,
+    they can represent an upgrade in production speed,
+    or concepts such as reputation.
     They could even be people if they don't need to perform any actions.
     For more ideas on how they can be used, browse the pre-built scenarios.
     </p>
