--- a/app/templates/configure/index.html
+++ b/app/templates/configure/index.html
@@ -19,104 +19,36 @@
         <a href="{{ url_for('browse_scenarios') }}"><button>Browse Example Scenarios</button></a>
         <a href="{{ url_for('blank_scenario') }}"><button onclick="return confirm('Are you sure you want to clear the current game\'s data and start with an empty setup?')">Blank Setup</button></a>
     </center>
-    <div class="entitylist-container">
+    <div class="entitylist-container" style="margin-bottom: 20px;">
         <a href="{{ url_for('configure_overall') }}">Overall Settings</a>
     </div>
-    <div class="flexdiv">
-        {% if game.items %}
-            <div class="select-box">
-                <select id="item-select">
-                    {% for item in game.items %}
-                        <option value="{{ item.id }}">{{ item.name }}</option>
-                    {% endfor %}
-                </select>
+    <style>
+        .flexdiv {
+            margin-top: 20px;
+        }
+    </style>
+    {% for entity_type in ['item', 'location', 'character', 'attrib', 'event'] %}
+        <div class="flexdiv">
+            {% set entity_data_list = entities_data[entity_type + 's'] %}
+            {% if entity_data_list %}
+                <div class="select-box">
+                    <select id="{{ entity_type }}-select">
+                        {% for entity_data in entity_data_list %}
+                            <option value="{{ entity_data.id }}">{{ entity_data.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="modify-button">
+                    <button onclick="configureSelected('{{ entity_type }}')">Modify {{ entity_type|title }}</button>
+                </div>
+            {% else %}
+                <span class="no-items">(No {{ entity_type|title }}s)</span>
+            {% endif %}
+            <div class="entitylist-container">
+                <a href="/configure/{{ entity_type }}/new">Add New</a>
             </div>
-            <div class="modify-button">
-                <button onclick="configureSelected('item')">Modify Item</button>
-            </div>
-        {% else %}
-            <p class="no-items">(No items)</p>
-        {% endif %}
-        <div class="entitylist-container">
-            <a href="/configure/item/new">Add New</a>
         </div>
-    </div>
-    <div class="flexdiv">
-        {% if game.locations %}
-            <div class="select-box">
-                <select id="location-select">
-                    {% for location in game.locations %}
-                        <option value="{{ location.id }}">{{ location.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="modify-button">
-                <button onclick="configureSelected('location')">Modify Location</button>
-            </div>
-        {% else %}
-            <p class="no-items">(No locations)</p>
-        {% endif %}
-        <div class="entitylist-container">
-            <a href="/configure/location/new">Add New</a>
-        </div>
-    </div>
-    <div class="flexdiv">
-        {% if game.characters %}
-            <div class="select-box">
-                <select id="char-select">
-                    {% for char in game.characters %}
-                        <option value="{{ char.id }}">{{ char.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="modify-button">
-                <button onclick="configureSelected('char')">Modify Character</button>
-            </div>
-        {% else %}
-            <p class="no-items">(No characters)</p>
-        {% endif %}
-        <div class="entitylist-container">
-            <a href="/configure/char/new">Add New</a>
-        </div>
-    </div>
-    <div class="flexdiv">
-        {% if game.attribs %}
-            <div class="select-box">
-                <select id="attrib-select">
-                    {% for attrib in game.attribs %}
-                        <option value="{{ attrib.id }}">{{ attrib.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="modify-button">
-                <button onclick="configureSelected('attrib')">Modify Attribute</button>
-            </div>
-        {% else %}
-            <p class="no-items">(No attributes)</p>
-        {% endif %}
-        <div class="entitylist-container">
-            <a href="/configure/attrib/new">Add New</a>
-        </div>
-    </div>
-    <div class="flexdiv">
-        {% if game.events %}
-            <div class="select-box">
-                <select id="event-select">
-                    {% for event in game.events %}
-                        <option value="{{ event.id }}">{{ event.name }}</option>
-                    {% endfor %}
-                </select>
-            </div>
-            <div class="modify-button">
-                <button onclick="configureSelected('event')">Modify Event</button>
-            </div>
-        {% else %}
-            <p class="no-items">(No events)</p>
-        {% endif %}
-        <div class="entitylist-container">
-            <a href="/configure/event/new">Add New</a>
-        </div>
-    </div>
+    {% endfor %}
     <script>
         function configureSelected(type) {
             var selectedId = $("#" + type + "-select").val();
