Load lists of entities from db with raw sql.

--- a/app/templates/session/upper_right_menu.html
+++ b/app/templates/session/upper_right_menu.html
@@ -7,5 +7,5 @@
             <a href="{{ url_for('get_session_link') }}">Get Session Link</a><br>
         </div>
     </span>
-    Player <span class="userid" id="playerName">{{ current_user_id }}</span>
+    Player <span class="username" id="playerName">{{ current_username }}</span>
 </div>
